--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -7,7 +7,7 @@
   <p>Interest: <%= @campaign.return_rate * 100 %> %</p>
   <p>Duration: <%= @campaign.loan_duration %> months</p>
 
-
+  <!-- risk card component -->
   <div class="card-campaign-status p-3 mb-4" style="width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
     <div class="p-2 d-flex justify-content-around align-items-center" style="background-color: white; border-radius: 16px;">
       <div class="text-center">
