--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -35,21 +35,33 @@
   <div class="row">
     <div class="col-md-8">
       <!-- COMPANY LOGO -->
-      <div class="restaurant-logo">
-        <img class="" style="border-radius: 20px; border-color: 1px solid white; height: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+      <div class="restaurant-logo" style="position: relative;">
+        <div class="layer2" style="z-index: 2;">
+          <% if @campaign.company.type_store == "Restaurant" %>
+          <%= image_tag "restaurant.png", style:"padding: 16px; background-color: #f4f4f4; border-radius: 20px; border-color: 1px solid white; height: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);", alt: "avatar" %>
+          <% elsif @campaign.company.type_store == "Bar" %>
+          <%= image_tag "bar.png", style:"padding: 16px; background-color: #f4f4f4; border-radius: 20px; border-color: 1px solid white; height: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);", alt: "avatar" %>
+          <% else %>
+          <%= image_tag "cafe.png", style:"padding: 16px; background-color: #f4f4f4; border-radius: 20px; border-color: 1px solid white; height: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);", alt: "avatar" %>
+          <% end %>
+        </div>
+        <!-- <div class="layer1" style="position: absolute; z-index: 1; color: white; padding: 16px; background-color: white; border-radius: 20px; border-color: 1px solid white; height: 144px; width: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
+          emptydiv
+        </div> -->
       </div>
 
-      <h2 class="mt-3" style="font-weight: bold;"><%= @campaign.company.name %></h2>
+      <h2 class="mt-4" style="font-weight: bold;"><%= @campaign.company.name %></h2>
+      <h6 style="color: grey;"><%= @campaign.company.type_store %></h6 style="color: grey;">
       <!-- CAMPAIGN PROGRESS STATUS -->
       <div class="justify-content-center">
         <div class="">
-          <div class="card-campaign-status p-2 mb-5" style="max-width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
+          <div class="card-campaign-status p-2 mb-5 mt-5" style="max-width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
             <div class="target-bar m-3" style="background-color: white; border-radius: 50px;">
-                <% raised_sum = 0 %>
-                <% @campaign.investments.each do |investment| %>
-                <% raised_sum += investment.amount %>
-                <% end %>
-                <% progress_percentage = ((raised_sum / @campaign.min_target.to_f)*100).round(0) %>
+              <% raised_sum = 0 %>
+              <% @campaign.investments.each do |investment| %>
+              <% raised_sum += investment.amount %>
+              <% end %>
+              <% progress_percentage = ((raised_sum / @campaign.min_target.to_f)*100).round(0) %>
               <div class="" style="background-color: #1EDD88; width: <%= progress_percentage %>%; border-radius: 50px;">
                 <p class="px-3"><%= progress_percentage %>%</p>
               </div>
@@ -120,13 +132,6 @@
               <% end %>
             </div>
 
-            <!-- <div class="d-flex justify-content-between align-items-center mb-4">
-              <p class="input">$ ###</p>
-              <div class="">
-                <h5><%#= link_to "Invest", "/", class: "btn btn-success" %></h5>
-              </div>
-            </div> -->
-
             <!-- campaign stats -->
             <div class="my-2 d-flex justify-content-between">
               <div class="text-center">
@@ -151,7 +156,7 @@
               <!-- range slider  -->
               <form>
                 <div class="investment-slider my-3">
-                  <label for="investmentRange" style="font-size: 12px;">Investment</label>
+                  <label for="investmentRange" style="margin: 0; font-size: 12px;">Investment</label>
                   <input type="range" class="investment-range w-100" min="100" max="1000" step="10" id="investmentRange">
                 </div>
               </form>
@@ -166,19 +171,19 @@
                 </div>
                 <div>X</div>
                 <div class="d-flex flex-column text-center">
-                  <h5 class="m-0">48</h5>
+                  <h5 class="m-0"><%= @campaign.loan_duration %></h5>
                   <p class="text-secondary m-0" style="font-size: 12px;">months</p>
                 </div>
                 <div>=</div>
                 <div class="d-flex flex-column text-center">
-                  <h5 class="m-0">$120</h5>
+                  <h5 class="m-0"><%= @campaign.loan_duration *  %></h5>
                   <p class="text-secondary m-0" style="font-size: 12px;">total return</p>
                 </div>
               </div>
             </div>
 
             <!-- rewards section -->
-            <div class="mt-4">
+            <div class="mt-5">
               <h5 style="font-size: 12px;">My reward</h5>
               <div class="d-flex align-items-center px-3 py-1" style="background-color: lightgrey; border-radius: 50px;">
                 <i class="fas fa-gift"></i>
