--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,8 +1,8 @@
 <!-- app/views/scooters/index.html.erb -->
 
 <%# if @campaigns.any? %>
-  <%#flash[:alert] = "We have found #{@campaigns.count(:id)} campaigns of your taste! " %>
-   <%# else %>
+<%#flash[:alert] = "We have found #{@campaigns.count(:id)} campaigns of your taste! " %>
+<%# else %>
 <%# end %>
 
 <div class="banner-index d-flex align-items-center justify-content-center">
@@ -10,72 +10,74 @@
 </div>
 
 
-  <!-- <div class="d-flex justify-content-center"> -->
-  <div class="d-flex flex-wrap justify-content-around">
+<!-- <div class="d-flex justify-content-center"> -->
+  <div class="px-5 mx-2 d-flex flex-wrap justify-content-around">
 
     <% @campaigns.each do |campaign| %>
+    <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
     <div class="card-wrapper">
       <!-- investment card -->
-        <div class="card-investment">
-            <div class="card-user">
-              <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
-            </div>
+      <div class="card-investment">
+        <div class="card-user">
+          <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+        </div>
         <!-- background pic -->
-<!-- insert company.photo -->
-            <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
-            <!-- <h5>10 days left</h5> -->
-            <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+        <!-- insert company.photo -->
+        <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
+        <!-- <h5>10 days left</h5> -->
+        <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
 
-            <h1><%= campaign.company.name %></h1>
-            <div style="height: 50px">
-              <p><%= campaign.title %></p>
-            </div>
+        <h1><%= campaign.company.name %></h1>
+        <div style="height: 50px">
+          <p><%= campaign.title %></p>
+        </div>
 
-            <div class="box-align">
-              <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
-            </div>
-            <div class="target-bar">
-                <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
-                <% target = campaign.max_target %>
-                <% status = ((raised.to_f/target)*100).round(1) %>
-              <div>
-                <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
-                </progress>
-              </div>
-              <div class="relative"> <p><%= status %> %</p></div>
-            </div>
+        <div class="box-align">
+          <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
+        </div>
+        <div class="target-bar">
+          <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
+          <% target = campaign.max_target %>
+          <% status = ((raised.to_f/target)*100).round(1) %>
+          <div>
+            <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
+            </progress>
+          </div>
+          <div class="relative"> <p><%= status %> %</p></div>
+        </div>
 
-<style>
-div.relative {
-  position: relative;
-  left: 0px;
-  bottom:23px;
+        <style>
+          div.relative {
+            position: relative;
+            left: 0px;
+            bottom:23px;
 
-}
-</style>
+          }
+        </style>
 
-          <div class="box-align d-flex justify-content-between">
-              <div class="text-center">
-                <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
-                <p>raised</p>
-              </div>
-              <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-              </div>
-              <div class="text-center">
-                <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
-                <p>interest</p>
-              </div>
-              <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-              </div>
-              <div class="text-center">
-                <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
-                <p>investors</p>
-              </div>
+        <div class="box-align d-flex justify-content-between">
+          <div class="text-center">
+            <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+            <p>raised</p>
+          </div>
+          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+          </div>
+          <div class="text-center">
+            <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+            <p>interest</p>
+          </div>
+          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+          </div>
+          <div class="text-center">
+            <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
+            <p>investors</p>
           </div>
         </div>
+      </div>
     </div>
-      <!-- # investment card closing div -->
-      <% end %>
+    <% end %>
+    <!-- # investment card closing div -->
+    <% end %>
   </div>
 
   <!--  -->
