--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -74,12 +74,12 @@
               </div>
               <div style="border: 1px solid lightgrey; height: 50px"></div>
               <div class="text-center">
-                <h5>$ <%= raised_sum %></h5>
+                <h5>$<%= number_with_precision(raised_sum, :precision => 0, :delimiter => ',') %></h5>
                 <p class="text-secondary mb-2" style="font-size: 12px;">raised</p>
               </div>
               <div style="border: 1px solid lightgrey; height: 50px"></div>
               <div class="text-center">
-                <h5>##d ##h</h5>
+                <h5><%= ((@campaign.expiry_date - DateTime.current)/(24*3600)).round(0) %>d <%= (((@campaign.expiry_date - DateTime.current)/(24*3600)).round(2).to_s.split(".").last.to_i * 0.24).round(0) %>h</h5>
                 <p class="text-secondary mb-2" style="font-size: 12px;">remaining</p>
               </div>
             </div>
@@ -135,7 +135,7 @@
             <!-- campaign stats -->
             <div class="my-2 d-flex justify-content-between">
               <div class="text-center">
-                <h5 class="m-0"><%= @campaign.return_rate %></h5>
+                <h5 class="m-0"><%= (@campaign.return_rate * 100).round(1) %>%</h5>
                 <p class="text-secondary m-0" style="font-size: 12px;">return</p>
               </div>
               <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
@@ -147,7 +147,7 @@
               <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
               </div>
               <div class="text-center">
-                <h5 class="m-0"><%= @campaign.min_target %></h5>
+                <h5 class="m-0">$<%= number_with_precision(@campaign.min_target, :precision => 0, :delimiter => ',') %></h5>
                 <p class="text-secondary m-0" style="font-size: 12px;">target</p>
               </div>
             </div>
@@ -176,7 +176,7 @@
                 </div>
                 <div>=</div>
                 <div class="d-flex flex-column text-center">
-                  <h5 class="m-0"><%= @campaign.loan_duration *  %></h5>
+                  <h5 class="m-0">$<%= number_with_precision((@campaign.loan_duration * (@campaign.return_rate).to_f).round(2), :precision => 0, :delimiter => ',') %></h5>
                   <p class="text-secondary m-0" style="font-size: 12px;">total return</p>
                 </div>
               </div>
@@ -187,7 +187,7 @@
               <h5 style="font-size: 12px;">My reward</h5>
               <div class="d-flex align-items-center px-3 py-1" style="background-color: lightgrey; border-radius: 50px;">
                 <i class="fas fa-gift"></i>
-                <p class="m-0 ml-4">1x dinner</p>
+                <p class="m-0 ml-4"><%= @campaign.rewards.first.description %></p>
               </div>
             </div>
 
