--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -6,6 +6,7 @@
 .wrapper-link {
   text-decoration: none!important;
   color: black;
+  margin: 0;
 }
 
 .wrapper-link:hover {
@@ -48,7 +49,7 @@
   height: 30px;
   border-radius: 8px;
   background-color: white;
-  margin: 20px;
+  margin: 10px;
 }
 
 .card-investment .target-bar-percentage {
