--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
 
   <div style="height: 85vh; margin-top: 80px;">
     <div class="d-flex justify-content-center" style="height: 425px; ">
@@ -82,45 +81,77 @@
 </div>
 
   <!-- investment card -->
-  <div class="d-flex justify-content-center">
-    <div class="card-investment">
-      <div class="card-user">
-        <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
-      </div>
-      <!-- background pic -->
-      <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
-      <h5>10 days left</h5>
-      <h1>Tipo Siete</h1>
-      <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
-      <div class="box-align">
-        <h4>$100,000 target</h4>
-      </div>
-      <div class="target-bar">
-        <div class="target-bar-percentage">
-          <p class="w-100 align-self-center">79%</p>
+  <div class="d-flex flex-wrap justify-content-around">
+
+    <% @campaigns.take(3).each do |campaign| %>
+    <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
+
+    <div class="card-wrapper">
+      <!-- investment card -->
+      <div class="card-investment">
+        <div class="card-user">
+          <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
         </div>
-      </div>
-      <div class="box-align d-flex justify-content-between">
-        <div class="text-center">
-          <h4>$79,540</h4>
-          <p>raised</p>
+        <!-- background pic -->
+        <!-- insert company.photo -->
+        <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
+
+        <!-- <h5>10 days left</h5> -->
+        <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+
+        <h1><%= campaign.company.name %></h1>
+        <div style="height: 50px">
+          <p><%= campaign.title %></p>
         </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+
+        <div class="box-align">
+          <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
         </div>
-        <div class="text-center">
-          <h4>5%</h4>
-          <p>interest</p>
+        <div class="target-bar">
+          <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
+          <% target = campaign.max_target %>
+          <% status = ((raised.to_f/target)*100).round(1) %>
+          <div>
+            <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
+            </progress>
+          </div>
+          <div class="relative"> <p><%= status %> %</p></div>
         </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-        </div>
-        <div class="text-center">
-          <h4>119</h4>
-          <p>investors</p>
+
+        <style>
+          div.relative {
+            position: relative;
+            left: 0px;
+            bottom:23px;
+
+          }
+        </style>
+
+        <div class="box-align d-flex justify-content-between">
+          <div class="text-center">
+            <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+            <p>raised</p>
+          </div>
+          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+          </div>
+          <div class="text-center">
+            <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+            <p>interest</p>
+          </div>
+          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+          </div>
+          <div class="text-center">
+            <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
+            <p>investors</p>
+          </div>
         </div>
       </div>
     </div>
-
+    <% end %>
+    <% end %>
+    <!-- # investment card closing div -->
   </div>
+
 
   <div class="d-flex justify-content-center">
     <h5 class="mt-5"><%= link_to "SHOW MORE", "/campaigns", class: "btn btn-secondary" %></h5>
@@ -130,20 +161,22 @@
   <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
     </div>
 
-  <div class="d-flex my-4 py-4">
-    <img class="pic-home" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1">
-    <div class="ml-4 align-self-center">
-      <h1>Support entrepreneurs on a mission</h1>
-      <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
+  <div class="container">
+    <div class="d-flex my-4 py-4">
+      <img class="pic-home" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1">
+      <div class="ml-4 align-self-center">
+        <h1>Support entrepreneurs on a mission</h1>
+        <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
+      </div>
     </div>
-  </div>
 
-  <div class="d-flex my-4 py-4">
-    <div class="mr-4 align-self-center">
-      <h1>Create change in your community</h1>
-      <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
+    <div class="d-flex my-4 py-4">
+      <div class="mr-4 align-self-center">
+        <h1>Create change in your community</h1>
+        <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
+      </div>
+      <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
     </div>
-    <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
   </div>
 
 
@@ -159,5 +192,4 @@
     <h5><%= link_to "FUND RESTAURANTS", "/campaigns", class: "btn btn-secondary" %></h5>
   </div>
 
-<!-- container closing DIV -->
-</div>
+
