--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,8 @@
         </li>
 
         <li class="nav-item active">
-          <%= link_to "Raising", "/my_campaigns", class: "nav-link" %>
+  <!-- one we have the link please redirect to  -->
+          <%= link_to "Raising", "#", class: "nav-link" %>
         </li>
 
         <li class="nav-item active">
