--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,2 +1,8 @@
 
-<p>TEST</p>
+<% if user_signed_in? && current_user.owner == false %>
+  <%= render "investments/shared/sidemenu" %>
+  <%#= render "devise/shared/links" %>
+
+<% else %>
+  <%= render "Sign up as a investor now!" %>
+<% end %>
