--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -216,12 +216,16 @@
   </div>
 </div>
 
-<!-- <div class="row justify-content-center">
-  <div class="col-12 col-lg-6">
-    <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%#= ENV['MAPBOX_API_KEY'] %>"></div>
-    <span class="address-box-grey" style="color: white; position: absolute; bottom: 5px; left: 20px;"><%#= @campaign.address %></span>
+
+<!-- map  -->
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-6">
+      <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      <span class="address-box-grey" style="color: white; position: absolute; bottom: 5px; left: 20px;"><%= @company.address %></span>
+    </div>
   </div>
-</div> -->
+
+
 
 <style>
   .input-group-btn {
