--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -181,7 +181,7 @@
                 <div class="my-2">
                   <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column text-center">
-                      <h5 class="m-0">$2.5</h5>
+                      <h5 class="m-0"><span id="pay_month"></span></h5>
                       <p class="text-secondary m-0" style="font-size: 12px;">per month</p>
                     </div>
                     <div>X</div>
