--- a/app/views/investments/shared/_sidemenu.html.erb
+++ b/app/views/investments/shared/_sidemenu.html.erb
@@ -1,25 +1,4 @@
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Simple Sidebar - Start Bootstrap Template</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/simple-sidebar.css" rel="stylesheet">
-
-</head>
-
-<body>
 
   <div class="d-flex" id="wrapper">
 
@@ -41,7 +20,19 @@
 <!--         <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
  -->
       <div class="container-fluid">
-        <h1 class="mt-4">Investor Dashboard</h1>
+
+
+      <div class="container">
+
+          <div style="position:absolute; top:350px; left:300px; width:500px; height:500px;">
+            <canvas data-graph="<%= JSON.generate(@graph_data) %>" id="bar" ></canvas>
+      </div>
+
+          <div style="position:absolute; top:350px; right:100px; width:500px; height:500px;">
+              <canvas data-graph="<%= JSON.generate(@graph_data) %>" id="pie"></canvas>
+      </div>
+
+      </div>
 
       </div>
     </div>
@@ -50,7 +41,3 @@
   </div>
   <!-- /#wrapper -->
 
-
-</body>
-
-</html>
