--- a/app/assets/stylesheets/components/_sidemenu.scss
+++ b/app/assets/stylesheets/components/_sidemenu.scss
@@ -2,6 +2,10 @@ body {
   overflow-x: hidden;
 }
 
+#wrapper{
+  height:100vh;
+}
+
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
