--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
             required: true,
             input_html: { autocomplete: "new-password" } %>
             <div class="mt-4">
-              <%= f.input :user_type,
+              <%= f.input :owner,
               as: :boolean,
               label: "Sign up as a restaurant" %>
             </div>
