--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -1,4 +1,5 @@
 <div style="">
+
   <!-- CARAUSEL -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -216,7 +217,6 @@
   </div>
 </div>
 
-
 <!-- map  -->
   <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
@@ -225,7 +225,15 @@
     </div>
   </div>
 
+  <div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
 
+<%= console %>
 
 <style>
   .input-group-btn {
