--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -1,4 +1,4 @@
-<div style="">
+<!-- <div style=""> -->
 
   <!-- CARAUSEL -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -198,6 +198,7 @@
                   </div>
                 </div>
 
+
                 <!-- rewards section -->
                 <div class="mt-4">
                   <h5 style="font-size: 12px;">My reward</h5>
@@ -217,13 +218,13 @@
   </div>
 </div>
 
-<!-- map  -->
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-6">
-      <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-      <span class="address-box-grey" style="color: white; position: absolute; bottom: 5px; left: 20px;"><%= @company.address %></span>
-    </div>
+<div class="row justify-content-center">
+  <div class="col-12 col-lg-6">
+    <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    <span class="address-box-grey" style="color: white; position: absolute; bottom: 5px; left: 20px;"><%= @company.address %></span>
   </div>
+</div>
+
 
 
 <style>
