--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,9 +1,6 @@
 <% if user_signed_in? && current_user.owner == true %>
   <p>Internal note: You are an owner</p>
   <%= render "campaigns/shared/showowner" %>
-  <%#= render "devise/shared/links" %>
-
 <% else %>
-  <%= render "campaigns/shared/showinvestor" %>
-  <!-- the code on show for investor should be inside the shared/showowner.html.erb -->
+  <%= render "investor" %>
 <% end %>
