--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
           </div>
 
           <div class="form-actions text-center" >
-            <%= f.button :submit, "Sign up", class:"btn btn-secondary m-3 px-5" %>
+            <%= f.button :submit, "Sign up", class:"btn btn-success m-3 px-5" %>
           </div>
           <% end %>
 
