--- a/app/views/campaigns/my_campaigns.html.erb
+++ b/app/views/campaigns/my_campaigns.html.erb
@@ -1,7 +1,7 @@
-<% if user_signed_in? && current_user.user_type == 'true' %>
+<% if user_signed_in? && current_user.owner == 'true' %>
   <%= render "campaigns/shared/sidemenu" %>
   <%#= render "devise/shared/links" %>
 
 <% else %>
-  <%= render "Sign up as a raiser now!" %>
+  <%= "Sign up as a raiser now!" %>
 <% end %>
