--- a/app/views/campaigns/my_campaigns.html.erb
+++ b/app/views/campaigns/my_campaigns.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? && current_user.owner == 'true' %>
+<% if user_signed_in? && current_user.owner == true %>
   <%= render "campaigns/shared/sidemenu" %>
   <%#= render "devise/shared/links" %>
 
