dynamics graphs.still to be improved.

--- a/app/views/investments/shared/_sidemenu.html.erb
+++ b/app/views/investments/shared/_sidemenu.html.erb
@@ -59,11 +59,11 @@
       <!-- <div class="container-fluid"> -->
         <div class="container">
           <div style="position:absolute; top:350px; left:300px; width:500px; height:500px;">
-            <canvas data-graph="<%= JSON.generate(@graph_data) %>" id="bar" ></canvas>
+            <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
           </div>
 
           <div style="position:absolute; top:350px; right:100px; width:500px; height:500px;">
-            <canvas data-graph="<%= JSON.generate(@graph_data) %>" id="pie"></canvas>
+            <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
           </div>
         </div>
      <!--  </div> -->
