basic form skeleton added to launch a campagin

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Campaigns#new</h1>
-<p>Find me in app/views/campaigns/new.html.erb</p>
+<%= link_to my_campaigns_path do %>
+<i class="fas fa-chevron-circle-left ml-3 mt-3 exit-button" style="font-size: 48px; color: grey;"></i>
+<% end %>
+
+<div class="container text-center">
+  <h1>Create your campaign on Fundeat!</h1>
+
+</div>
+
+<%= render 'form', campaign: @campaign %>
