--- a/app/views/campaigns/shared/_sidemenu.html.erb
+++ b/app/views/campaigns/shared/_sidemenu.html.erb
@@ -1,23 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Simple Sidebar - Start Bootstrap Template</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/simple-sidebar.css" rel="stylesheet">
-
-</head>
-
 <body>
 
   <div class="d-flex" id="wrapper">
@@ -38,10 +18,14 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+      <i class="m-3 fas fa-angle-double-left" id="menu-toggle"></i>
+
 
       <div class="container-fluid">
-        <%= render "campaigns/create" %>
+        <h3>Hi there, <%= current_user.first_name%></h3>
+        <p>Ready to launch your first campaign?</p>
+        <h5><%= link_to "Create Campaign", "/campaigns/new", class: "btn btn-secondary" %></h5>
+
       </div>
     </div>
     <!-- /#page-content-wrapper -->
@@ -61,7 +45,5 @@
       document.getElementById("wrapper").classList.toggle('toggled');
     });
   </script>
-
 </body>
 
-</html>
