--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,6 +10,13 @@ body {
   background-color: #F3F3F3;
 }
 
+.choose-option-campaigns {
+  width: 800px;
+  height: 200px;
+  border-radius: 10px;
+  background-color: #F3F3F3;
+}
+
 .pic-home {
   width: 430px;
   height: 250px;
