--- a/app/views/campaigns/shared/_sidemenu.html.erb
+++ b/app/views/campaigns/shared/_sidemenu.html.erb
@@ -7,11 +7,7 @@
       <div class="sidebar-heading">Dashboard</div>
       <div class="list-group list-group-flush">
         <a href="#" class="list-group-item list-group-item-action bg-light">Campaign</a>
-<!--         <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a> -->
+        <a href="/my_campaigns/support" class="list-group-item list-group-item-action bg-light">Support</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
