re route navbar dashboard to my_campaigns

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
           <%= link_to "Raising", "/raising", class: "nav-link" %>
         </li>
         <li class="nav-item active">
-         <%= link_to "Dashboard", "/campaigns/dashboard", class: "nav-link" %>
+         <%= link_to "Dashboard", "/my_campaigns", class: "nav-link" %>
         </li>
       <% end %>
 
