--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -12,7 +12,7 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   animate: 0.2s;
   // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: grey;
+  background: #bbbbbb;
   border-radius: 50px;
   // border: 0.2px solid #010101;
 }
