--- a/app/views/shared/_return_calculation.html.erb
+++ b/app/views/shared/_return_calculation.html.erb
@@ -1,7 +1,7 @@
-<div class="my-2">
+<div class="my-4">
   <div class="d-flex justify-content-around">
     <div class="d-flex flex-column text-center">
-      <h5 class="m-0"><span id="pay_month">$ ?</span></h5>
+      <h5 class="m-0"><span id="pay_month">$ <%= (campaign.return_rate * 250 / 12).round(2) %></span></h5>
       <p class="text-secondary m-0" style="font-size: 12px;">per month</p>
     </div>
     <div>X</div>
@@ -11,7 +11,7 @@
     </div>
     <div>=</div>
     <div class="d-flex flex-column text-center">
-      <h5 class="m-0" id="total_roi">$ ?</h5>
+      <h5 class="m-0" id="total_roi">$ <%= (campaign.loan_duration * (campaign.return_rate * 250 / 12)).round(2) %></h5>
       <p class="text-secondary m-0" style="font-size: 12px;">total return</p>
     </div>
   </div>
