--- a/app/views/campaigns/_investor.html.erb
+++ b/app/views/campaigns/_investor.html.erb
@@ -10,22 +10,49 @@
         <%= render "shared/restaurant_icon", campaign: @campaign %>
       </div>
 
-      <h2 class="mt-4 font-weight-bold"><%= @campaign.company.name %></h2>
+      <h2 class="mt-5 font-weight-bold"><%= @campaign.company.name %></h2>
       <h6 class="text-grey"><%= @campaign.company.type_store %></h6>
+
       <div>
-        <div>
+        <div class="w-75" style="margin: 0 auto;">
           <%= render "shared/campaign_status", campaign: @campaign %>
         </div>
 
-        <h4>Campaign Title</h4>
-        <p><%= @campaign.title %></p>
+        <h4 class="my-4"><%= @campaign.title %></h4>
+        <!-- SWITCH LATER WHEN CAMPAIGN DESCRIPTION GIVEN -->
+        <p><%= @campaign.company.description %></p>
+        <!-- -------------------------------------------- -->
 
-        <%= render "shared/campaign_risk", campaign: @campaign %>
-        <h4>Company Description</h4>
+        <div class="w-75" style="margin: 0 auto;">
+          <%= render "shared/campaign_risk", campaign: @campaign %>
+        </div>
+
+        <div class="text-center my-5">
+          <iframe width="100%" height="360" frameborder="0" src="https://www.youtube.com/embed/6QS17b1itIE?autoplay=1"></iframe>
+        </div>
+
+        <h4><%= @campaign.company.name %></h4>
         <p><%= @campaign.company.description %></p>
       </div>
-      <div class="text-center">
-        <iframe width="100%" height="360" src="https://www.youtube.com/embed/6QS17b1itIE?autoplay=1"></iframe>
+
+      <!-- rewards -->
+   <!--    <h4 class="my-4">Rewards</h4>
+      <div>
+        <div class="value-bar">
+          bar
+        </div>
+        <div class="reward-description">
+          <%#= @campaign.rewards[0].description %>
+        </div>
+        <div>
+          investors
+        </div>
+      </div> -->
+
+      <!-- map  -->
+      <div class="d-flex justify-content-center my-5">
+        <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+        <span class="address-box-grey" style="z-index: 2; color: white; position: absolute; bottom: 53px; left: 20px;"><%= @company.address %></span>
       </div>
     </div>
 
@@ -38,8 +65,8 @@
             <!-- invest field and button -->
             <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
             <div class="form-input d-flex justify-space-between align-items-center mb-4">
-              <%= f.input :amount, class: "input-field", placeholder: "250", label: false, :required => true,  :input_html => { :type => "number" } %>
-              <%= f.submit "Invest", class: "btn btn-success", style:"margin-left: 16px;" %>
+              <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
+              <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
             </div>
             <% end %>
 
@@ -49,9 +76,9 @@
             <div class="d-flex flex-column justify-content-between">
               <!-- range slider  -->
               <form>
-                <div class="investment-slider my-2">
+                <div class="investment-slider">
                   <label for="investmentRange" style="margin: 0; font-size: 12px;">Investment</label>
-                  <input type="range" class="investment-range w-100" min="20" max="10000" step="1" id="investmentRange">
+                  <input type="range" class="investment-range w-100" min="20" max="5000" step="10" id="investmentRange">
                 </div>
               </form>
             </div>
@@ -62,10 +89,13 @@
             <!-- rewards section -->
             <div class="mt-4">
               <h5 style="font-size: 12px;">My reward</h5>
-              <div class="d-flex align-items-center px-3 py-1" style="background-color: lightgrey; border-radius: 50px;">
-                <i class="fas fa-gift"></i>
-                <p class="m-0 ml-4"><%= @campaign.rewards.first.description %></p>
-              </div>
+              <% @campaign.rewards.each_with_index do |reward, index| %>
+                <div id="reward-<%= index %>" class="d-flex align-items-center px-3 py-1 mt-2 reward" style="border-radius: 50px;" data-amount="<%= reward.investment_amount %>">
+                  <!-- <input type="hidden" id="reward-threshold-<%= index %>" > -->
+                  <i class="fas fa-gift"></i>
+                  <p class="m-0 ml-4" id="investment_reward"><%= reward.description %></p>
+                </div>
+              <% end %>
             </div>
 
           </div>
@@ -78,13 +108,6 @@
 </div>
 </div>
 
-<!-- map  -->
-<div class="row justify-content-center">
-  <div class="col-12 col-lg-6">
-    <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-    <span class="address-box-grey" style="color: white; position: absolute; bottom: 5px; left: 20px;"><%= @company.address %></span>
-  </div>
-</div>
 
 
 <style>
