--- a/app/views/investments/dashboard_myinvestments.html.erb
+++ b/app/views/investments/dashboard_myinvestments.html.erb
@@ -1,5 +1,5 @@
 
-
+<!--
 <div class="row">
 
   <div class="col-2">
@@ -13,7 +13,27 @@
 
       </div>
     </div>
+  </div> -->
+
+
+<div class="d-flex" id="wrapper">
+  <!-- Sidebar -->
+  <div class="bg-light border-right" id="sidebar-wrapper">
+    <div class="sidebar-heading"><%= current_user.last_name%> <%= current_user.first_name%> </div>
+    <div class="list-group list-group-flush">
+      <a href="/investments/dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+      <a href="/investments/dashboard/myinvestments" class="list-group-item list-group-item-action bg-light">Investments</a>
+      <a href="/investments/dashboard/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
+      <a href="/investments/dashboard/mymap" class="list-group-item list-group-item-action bg-light">Map</a>
+
+    </div>
   </div>
+
+
+
+
+
+
 
   <div class="col-10 ">
 
