--- a/app/views/investments/dashboard_mymap.html.erb
+++ b/app/views/investments/dashboard_mymap.html.erb
@@ -5,8 +5,8 @@
     <div class="list-group list-group-flush">
       <a href="/investments/dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
       <a href="/investments/dashboard/myinvestments" class="list-group-item list-group-item-action bg-light">Investments</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Rewards</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Map</a>
+      <a href="/investments/dashboard/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
+      <a href="/investments/dashboard/mymap" class="list-group-item list-group-item-action bg-light">Map</a>
 
     </div>
   </div>
