several design and map changes . updated address seeds

--- a/app/views/shared/_restaurant_icon.html.erb
+++ b/app/views/shared/_restaurant_icon.html.erb
@@ -1,4 +1,4 @@
-<div class="layer2">
+<div>
   <% if campaign.company.type_store == "Restaurant" %>
   <%= image_tag "restaurant.png", class:"img-sm-grey", alt: "avatar" %>
   <% elsif campaign.company.type_store == "Bar" %>
