--- a/app/assets/stylesheets/campaigns/_show.scss
+++ b/app/assets/stylesheets/campaigns/_show.scss
@@ -3,7 +3,7 @@
   padding: 16px;
   background-color: #f4f4f4;
   border-radius: 20px;
-  border-color: 1px solid white;
+  border: 1px solid white;
   height: 144px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
@@ -42,3 +42,10 @@
   }
 }
 
+.address-box-green {
+  background-color: #e8faf0;
+  border-radius: 10px;
+  border: 1px solid white;
+  color: grey;
+  padding: 0 12px;
+}
