--- a/app/views/campaigns/_investor.html.erb
+++ b/app/views/campaigns/_investor.html.erb
@@ -2,6 +2,7 @@
   <%= render "carousel" %>
 </div>
 
+
 <div class="container" style="margin-top: -120px;">
   <div class="row">
     <div class="col-lg-8">
@@ -35,24 +36,10 @@
         <p><%= @campaign.company.description %></p>
       </div>
 
-      <!-- rewards -->
-   <!--    <h4 class="my-4">Rewards</h4>
-      <div>
-        <div class="value-bar">
-          bar
-        </div>
-        <div class="reward-description">
-          <%#= @campaign.rewards[0].description %>
-        </div>
-        <div>
-          investors
-        </div>
-      </div> -->
-
       <!-- map  -->
       <div class="d-flex justify-content-center my-5">
         <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-        <span class="address-box-grey" style="z-index: 2; color: white; position: absolute; bottom: 53px; left: 20px;"><%= @company.address %></span>
+        <span class="address-box-green" style="z-index: 2; position: absolute; bottom: 53px; left: 20px;"><%= @company.address %></span>
       </div>
     </div>
 
