routes aligned and html on dashboards

--- a/app/views/investments/dashboard_mymap.html.erb
+++ b/app/views/investments/dashboard_mymap.html.erb
@@ -3,10 +3,10 @@
   <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="sidebar-heading"><%= current_user.last_name%> <%= current_user.first_name%> </div>
     <div class="list-group list-group-flush">
-      <a href="/investments/dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="/investments/dashboard/myinvestments" class="list-group-item list-group-item-action bg-light">Investments</a>
-      <a href="/investments/dashboard/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
-      <a href="/investments/dashboard/mymap" class="list-group-item list-group-item-action bg-light">Map</a>
+      <a href="/myinvestments/dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+      <a href="/myinvestments" class="list-group-item list-group-item-action bg-light">Investments</a>
+      <a href="/myinvestments/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
+      <a href="/myinvestments/mymap" style="background-color: lightgrey; font-weight: bold!important;" class="list-group-item list-group-item-action">Map</a>
 
     </div>
   </div>
